fix: user routes error handling
